RESOLVED FIXED306907
Digital Credentials: abort signal's algorithm should be cleared
https://bugs.webkit.org/show_bug.cgi?id=306907
Summary Digital Credentials: abort signal's algorithm should be cleared
Marcos Caceres
Reported 2026-02-03 15:49:35 PST
The CredentialRequestCoordinator should clear the signal's algorithm.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-03 15:51:23 PST
Marcos Caceres
Comment 2 2026-02-03 15:57:32 PST
EWS
Comment 3 2026-02-10 11:20:56 PST
Committed 307191@main (bf4f370ebe89): <https://commits.webkit.org/307191@main> Reviewed commits have been landed. Closing PR #57819 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.