Digital Credentials: abort signal's algorithm should be cleared https://bugs.webkit.org/show_bug.cgi?id=306907 rdar://169572382

Reviewed by Pascoe.

* Adds clearAbortAlgorithm() method, which removes abort algorithms using stored a identifier.
* Calls clearAbortAlgorithm() from dismissPickerAndSettle, abortPicker, and destructor.
* Added abort check after signal handler setup to handle timing issues.

* Source/WebCore/Modules/identity/CredentialRequestCoordinator.cpp:
(WebCore::CredentialRequestCoordinator::prepareCredentialRequest):
(WebCore::CredentialRequestCoordinator::handleDigitalCredentialsPickerResult):
(WebCore::CredentialRequestCoordinator::dismissPickerAndSettle):
(WebCore::CredentialRequestCoordinator::clearAbortAlgorithm):
(WebCore::CredentialRequestCoordinator::abortPicker):
(WebCore::CredentialRequestCoordinator::~CredentialRequestCoordinator):
* Source/WebCore/Modules/identity/CredentialRequestCoordinator.h:

Canonical link: https://commits.webkit.org/307191@main